crates/convert/tests/snapshots/main__add_5.snap
---
source: crates/convert/tests/main.rs
expression: "String::from_utf8_lossy(&rust)"
---
// Generated by wasm2rs 0.1.0
macro_rules! wasm {
    ($vis:vis mod $module:ident use $(:: $embedder_start:ident ::)? $($embedder_more:ident)::+) => {

#[allow(non_snake_case)]
#[allow(dead_code)]
#[allow(unreachable_code)]
#[allow(unreachable_pub)]
$vis mod $module {

use $(::$embedder_start::)? $($embedder_more)::+ as embedder;

pub struct Allocated {
}

pub struct Instance {
    _inst: embedder::Module<Allocated>,
}

impl Instance {

    pub fn instantiate(store: embedder::Store) -> ::core::result::Result<Self, embedder::Trap> {
        let _inst = embedder::store::AllocateModule::allocate(store.instance);
        Self { _inst }
    }

fn _f0(_l0: i32) -> i32 {
    i32::wrapping_add(_l0, 5i32)
}

pub fn r#add_five(&self, _l0: i32) -> i32 {
    Self::_f0(_l0)
}

} // impl Instance

} // mod $module

    }
}
